06-vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
    - name: contour
      namespace: tanzu-system-ingress  # Target the shared Gateway
  hostnames:
    - "vault01.vtechk8s.com"
  rules:
    - backendRefs:
        - name: vault-ui
          port: 8200
